made some progress on SRS